# tfhe-10ms

./: README.md
src/: CMakeLists.txt
src/include/: lagrangehalfc_arithmetic.h  tfhe.h  tfhe_gate_bootstrapping_structures.h  tgsw_functions.h
src/libtfhe/: boot-gates.cpp  lwe-bootstrapping-functions-fft.cpp  lwe-bootstrapping-functions.cpp  tfhe_gate_bootstrapping.cpp  tfhe_gate_bootstrapping_structures.cpp  tfhe_io.cpp  tgsw-fft-operations.cpp  tgsw.cpp
src/libtfhe/fft_processors/fftw/: lagrangehalfc_impl.cpp
src/libtfhe/fft_processors/nayuki/: lagrangehalfc_impl.cpp
src/libtfhe/fft_processors/spqlios/: fft_processor_spqlios.cpp  lagrangehalfc_impl.cpp
src/test/: CMakeLists.txt  bootstrapping_test.cpp  bootstrapping_test_fft.cpp  test-bootstrapping-fft.cpp
src/test/fakes/: tgsw.h
